--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,144 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.10.0
 appnope==0.1.4
 asttokens==3.0.0
+async-timeout==4.0.3
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+build==1.3.0
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+chromadb==1.0.20
+click==8.1.8
+coloredlogs==15.0.1
 comm==0.2.3
+dataclasses-json==0.6.7
 debugpy==1.8.16
 decorator==5.2.1
+distro==1.9.0
+durationpy==0.10
 exceptiongroup==1.3.0
 executing==2.2.0
+filelock==3.19.1
+flatbuffers==25.2.10
+frozenlist==1.7.0
+fsspec==2025.7.0
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+h11==0.16.0
+hf-xet==1.1.8
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.34.4
+humanfriendly==10.0
+idna==3.10
 importlib_metadata==8.7.0
+importlib_resources==6.5.2
 ipykernel==6.30.1
 ipython==8.18.1
 jedi==0.19.2
+jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
+kubernetes==33.1.0
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.74
+langchain-text-splitters==0.3.9
+langsmith==0.4.15
+markdown-it-py==3.0.0
+marshmallow==3.26.1
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
+multidict==6.6.4
+mypy_extensions==1.1.0
 nest-asyncio==1.6.0
 numpy==2.0.2
+oauthlib==3.3.1
+onnxruntime==1.19.2
+openai==1.101.0
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+orjson==3.11.2
+overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.3.8
+posthog==5.4.0
 prompt_toolkit==3.0.51
+propcache==0.3.2
+protobuf==6.32.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
 Pygments==2.19.2
 PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.2
 pyzmq==27.0.2
+referencing==0.36.2
+regex==2025.7.34
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.1.0
+rpds-py==0.27.0
+rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
 stack-data==0.6.3
+sympy==1.14.0
+tenacity==9.1.2
+tiktoken==0.11.0
+tokenizers==0.21.4
+tomli==2.2.1
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
+typer==0.16.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
 wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+yarl==1.20.1
 zipp==3.23.0
+zstandard==0.24.0
